--- a/google-play/index.html
+++ b/google-play/index.html
@@ -93,9 +93,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="/img/google.jpg" alt="Free Google Play Gift Cards">
+        <img src="./img/google.jpg" alt="Free Google Play Gift Cards">
         <h2>Enter your Email to claim the Gift Card code</h2>
-        <input type="text" id="name" name="firstname" placeholder="Email">
+        <input type="text" id="name" name="firstname" placeholder="Email"><br>
         <label for="country">Select Amount:</label>
         <select id="country" name="country">
             <option value="$10">$10</option>
