--- a/google-play/index.html
+++ b/google-play/index.html
@@ -1,129 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Claim your free Google Play gift card with ease. Enter your email and select the amount to generate your code.">
     <title>Free Google Play Gift Cards</title>
     <meta name="keywords" content="Free Google Play Gift Cards">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/x-icon" href="/img/icon.png">
-    <style>
-        body {
-            background-color: #c79c0e;
-            font-family: 'Open Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-            color: #fff;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 100%;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-
-        .container img {
-            width: 100%;
-            max-width: 640px;
-            height: auto;
-        }
-
-        input[type=text], select {
-            width: 90%;
-            padding: 12px;
-            margin: 8px 0;
-            border: 4px solid #fff;
-            border-radius: 10px;
-            box-sizing: border-box;
-            color: #333;
-        }
-
-        input[type=submit] {
-            width: 100%;
-            background-color: #4CAF50;
-            color: white;
-            padding: 14px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .test-btn {
-            background-color: #fff;
-            border: none;
-            color: #b01316;
-            padding: 20px;
-            font-size: 20px;
-            margin: 10px 0;
-            cursor: pointer;
-            border-radius: 8px;
-        }
-
-        .test-btn:hover {
-            background-color: #b01316;
-            color: #fff;
-        }
-
-        .loader {
-            border: 16px solid #0a0a0a;
-            border-radius: 50%;
-            border-top: 16px solid #fff;
-            width: 60px;
-            height: 60px;
-            animation: spin 2s linear infinite;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #c79c0e;
+      background-size: cover;
+      background-position: center;
+      color: #fff;
+      text-align: center;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      margin: 20px auto;
+    }
+    input[type="text"], select, input[type="submit"] {
+      width: 90%;
+      max-width: 400px;
+      padding: 12px;
+      margin: 10px auto;
+      display: block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    .test-btn {
+      background-color: #fff;
+      border: none;
+      color: #b01316;
+      padding: 15px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 18px;
+      margin: 10px 0;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .test-btn:hover {
+      background-color: #f0f0f0;
+    }
+    .loader {
+      border: 8px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 8px solid #3498db;
+      width: 60px;
+      height: 60px;
+      animation: spin 2s linear infinite;
+      margin: 20px auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    a:link, a:visited {
+      background-color: #12c73c;
+      color: white;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 10px;
+    }
+    a:hover, a:active {
+      background-color: green;
+    }
+    @media (max-width: 768px) {
+      body {
+        padding: 10px;
+      }
+      input[type="text"], select, input[type="submit"] {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <img src="./img/google.jpg" alt="Free Google Play Gift Cards">
-        <h2>Enter your Email to claim the Gift Card code</h2>
-        <input type="text" id="name" name="firstname" placeholder="Email"><br>
-        <label for="country">Select Amount:</label>
+  <center>
+    <img src="./img/google.jpg" alt="Free Google Play Gift Cards">
+  </center>
+  <div>
+    <b>Enter your Email to claim the Gift Card code</b>
+    <input type="text" id="country" name="firstname" placeholder="Email">
+    <label for="country">Select Amount:</label>
         <select id="country" name="country">
             <option value="$10">$10</option>
             <option value="$20">$20</option>
             <option value="$35">$35</option>
             <option value="$50">$50</option>
         </select>
-        <button class='test-btn'>Proceed</button>
-        <p id="test"></p>
-    </div>
-    <script>
-        window.addEventListener('load', () => {
-            document.querySelector('button.test-btn').addEventListener('click', e => {
-                document.querySelector('#test').innerHTML = '<div class="loader"></div><h5>Looking for unused codes...</h5>';
-                setTimeout(yes, 15000);
-            });
-        });
+    <button class="test-btn">Proceed</button>
+    <p id="test"></p>
+  </div>
+  <script>
+    window.addEventListener('load', () => {
+      document.querySelector('.test-btn').addEventListener('click', () => {
+        document.querySelector('#test').innerHTML = '<div class="loader"></div><h3>Looking for unused codes...</h3>';
+        setTimeout(yes, 15000);
+      });
+    });
 
-        function yes() {
-            var name = document.getElementById('name').value;
-            var country = document.getElementById('country').value;
-            var str = '<b>YOUR CODE IS SUCCESSFULLY GENERATED✅</b> <p>7YTS6RGC0TR3****</p> <p>Gift Card Amount: ' + country +
-                ' <br><a href="https://omnioffers.com/1734167">Final Step</a>';
-            document.getElementById('test').innerHTML = str;
-        }
-    </script>
-    <footer>
-        <p>&copy; 2024 Free Google Play Gift Cards. All Rights Reserved.</p>
-    </footer>
+    function yes() {
+      const country = document.getElementById('country').value;
+      document.getElementById('test').innerHTML = `
+        <b>YOUR CODE IS SUCCESSFULLY GENERATED✅</b> <p>7YTS6RGC0TR3****</p> <p>Gift Card Amount: ' + country +
+                ' <br><a href="https://omnioffers.com/1734167">Final Step</a>
+      `;
+    }
+  </script>
+	   <!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4802004,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4802004&101" alt="web statistics" border="0"></a></noscript>
+<!-- Histats.com  END  -->
 </body>
 </html>
