--- a/google-play/index.html
+++ b/google-play/index.html
@@ -113,8 +113,7 @@
     function yes() {
       const country = document.getElementById('country').value;
       document.getElementById('test').innerHTML = `
-        <b>YOUR CODE IS SUCCESSFULLY GENERATED✅</b> <p>7YTS6RGC0TR3****</p> <p>Gift Card Amount: ' + country +
-                ' <br><a href="https://omnioffers.com/1734167">Final Step</a>
+        <b>YOUR CODE IS SUCCESSFULLY GENERATED✅</b> <p>7YTS6RGC0TR3****</p> <p>Gift Card Amount:  ${country} <br><a href="https://omnioffers.com/1734167">Final Step</a><p>Username: ${country}<br>
       `;
     }
   </script>
